Breaking changes to the /transfer endpoint
- Require `collectionRootPath` query param. This is the root directory of
  the globus collection. Passing it via the API allows the configuration
  to stay local to the client.
- API version bumped to 1.1.0. 

Configuration changes:

- Remove CollectionRootPath from scicat-globus-proxy-config.yaml

Internal changes:

- Add getOrigDatablocks. TODO add tests
